[metadata]
author = Chris Graham
author_email = eratosthene@gmail.com
description-file = README.rst
license = GNU Lesser General Public License v3 (LGPLv3)
name = kmpc
summary = kmpc is a Kivy-based mpd client, primarily meant for use on a Raspberry Pi mounted in a car.
url = https://github.com/eratosthene/kmpc

[options]
include_package_data = True
packages = find:
setup_requires = setuptools>=38.4.0
install_requires = setuptools>=38.4.0; kivy>=1.10.0; twisted; mutagen; musicbrainzngs; pillow

[options.extras_require]
rpi = rpi_backlight

[options.package_data]
* = resources/*

[options.entry_points]
console_scripts = 
    kmpc = kmpc.command_line:main_app
    kmpcmanager = kmpc.command_line:manager_app
